VSE: keyframed Speed Control strips acting on Scene strips interfere with other keyframed strips #55192

Closed
opened 2018-05-25 03:15:01 +02:00 by Jacob van't Hoog · 6 comments

System Information
Windows 10

Blender Version
Broken in both 2.79b and 2.80-41cba97

Description

I was using the Video Sequencer to edit an animation. I had a Scene strip, with a Speed Control strip attached to act as a freeze frame -- I keyframed the speed factor so it would jump between 0 and 1 to pause at certain points. And I had some moving image strips overlayed on top of this. I noticed that the movement of the image strips would jump every time the speed changed, even though the speed control strip wasn't connected to them.

Steps to reproduce
Here's a simplified file with the bug:
bug.blend
The text is supposed to move up and down the screen smoothly. But when you play the sequence, the animation jumps in the middle, right when the speed factor of the speed control strip changes. Sometimes the text jumps at other points too.

Steps to reproduce

  • In the Video Sequencer, add a Scene strip.
  • Add a Speed Control strip connected to the Scene strip.
  • On the speed control strip, uncheck "Stretch to input strip length" and check "Use as speed." Change "Multiply Speed" to 1.
  • Add keyframes to the Speed factor so that it starts at 0, and at some point has a Constant keyframe that jumps to 1
  • Add a text or image strip on top of the scene/speed strips. Add keyframes it so it moves. When the Speed strip's speed changes, the text/image animation will reset.

The bug still occurs even when I select a different scene than the one with the sequence.

**System Information** Windows 10 **Blender Version** Broken in both 2.79b and 2.80-41cba97 **Description** I was using the Video Sequencer to edit an animation. I had a Scene strip, with a Speed Control strip attached to act as a freeze frame -- I keyframed the speed factor so it would jump between 0 and 1 to pause at certain points. And I had some moving image strips overlayed on top of this. I noticed that the movement of the image strips would jump every time the speed changed, even though the speed control strip wasn't connected to them. **Steps to reproduce** Here's a simplified file with the bug: [bug.blend](https://archive.blender.org/developer/F3450176/bug.blend) The text is supposed to move up and down the screen smoothly. But when you play the sequence, the animation jumps in the middle, right when the speed factor of the speed control strip changes. Sometimes the text jumps at other points too. **Steps to reproduce** - In the Video Sequencer, add a Scene strip. - Add a Speed Control strip connected to the Scene strip. - On the speed control strip, uncheck "Stretch to input strip length" and check "Use as speed." Change "Multiply Speed" to 1. - Add keyframes to the Speed factor so that it starts at 0, and at some point has a Constant keyframe that jumps to 1 - Add a text or image strip on top of the scene/speed strips. Add keyframes it so it moves. When the Speed strip's speed changes, the text/image animation will reset. The bug still occurs even when I select a different scene than the one with the sequence.

Added subscriber: @vantjac

Added subscriber: @vantjac

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed (without further investigation in code so far)

Strangely enough: if you

  • mute the Speed strip (H) and let the animation run through the timeline once
  • unmute again (Alt+H)
  • cant get it to fail after that, everything is fine then

needs further investigation...

Confirmed (without further investigation in code so far) Strangely enough: if you - mute the Speed strip (H) and let the animation run through the timeline once - unmute again (Alt+H) - cant get it to fail after that, everything is fine then needs further investigation...

This issue was referenced by a42cae1600

This issue was referenced by a42cae160082afaf5507fa558fbaf5d1d5987f17

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Richard Antalik self-assigned this 2019-07-09 00:17:18 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55192
No description provided.