source/blender/blenkernel/intern/sequencer.c
@@ -3740,9 +3740,6 @@ static ImBuf *do_render_strip_uncached(const SeqRenderData *context,
         ibuf = seq_render_scene_strip(context, seq, nr, cfra);
       }
 
-      /* Scene strips update all animation, so we need to restore original state.*/
-      BKE_animsys_evaluate_all_animation(context->bmain, context->depsgraph, context->scene, cfra);
-
       break;
     }
 
